--- a/app/src/main/res/layout/first_fragment.xml
+++ b/app/src/main/res/layout/first_fragment.xml
@@ -2,27 +2,25 @@
     <!--<LinearLayout-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="200dp">-->
+
+    <!--</LinearLayout>-->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <!--<com.example.thejiyu.view.ImageCycleView-->
         <!--android:id="@+id/icv_topView"-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="match_parent">-->
     <!--</com.example.thejiyu.view.ImageCycleView>-->
-    <!--</LinearLayout>-->
     <android.support.v4.widget.SwipeRefreshLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipe"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-            <LinearLayout
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="200dp"
-                android:orientation="vertical">
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scrollbars="vertical">
-                </android.support.v7.widget.RecyclerView>
-            </LinearLayout>
+                android:scrollbars="vertical">
+            </android.support.v7.widget.RecyclerView>
     </android.support.v4.widget.SwipeRefreshLayout>
+</LinearLayout>
