--- a/app/src/main/res/layout/item_foot.xml
+++ b/app/src/main/res/layout/item_foot.xml
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:id="@+id/id_tv"
         android:text="加载中..." />
 
 
